Opened 3 years ago

Closed 3 years ago

#17532 closed bug (fixed)

[Terminal] Mouse protocol not working

Reported by: CandyMan Owned by: korli
Priority: normal Milestone: R1/beta4
Component: Applications/Terminal Version: R1/beta3
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by diver)

The Extended/SGR 1006 mouse protocol, supported by xterm 277 and newer.

     Message format: Esc[<0;123;456M - mouse button press
                 or: Esc[<0;123;456m - mouse button release

Haiku always sends a capital "M" at the end of the message, or doesn't send it at all when the mouse button is released.

Change History (3)

comment:1 by diver, 3 years ago

Component: - GeneralApplications/Terminal
Description: modified (diff)
Owner: changed from nobody to jackburton
Summary: Mouse protocol now working[Terminal] Mouse protocol not working

comment:2 by korli, 3 years ago

Milestone: UnscheduledR1/beta4
Owner: changed from jackburton to korli
Status: newassigned

comment:3 by waddlesplash, 3 years ago

Resolution: fixed
Status: assignedclosed

Merged

Note: See TracTickets for help on using tickets.